# review_system

./: .gitignore  AGENTS.md  ALTIDEV4_BASELINE_REPORT.md  CODING_CONVENTION.md  COMPLETION_REPORT.md  IMPLEMENTATION_PROGRESS.md  INTERNAL_PR_REVIEW_SYSTEM_EXECUTION_PLAN.md  README.md  SELF_CODE_REVIEW.md  docker-compose.yml  pyproject.toml  review_system.md
review-bot/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
review-bot/alembic/: env.py
review-bot/alembic/versions/: 20260420_000001_initial_review_bot_v2.py  20260420_000002_dead_letter_records.py  20260420_000003_finding_evidence_autofix.py  20260421_000004_finding_lifecycle_events.py  20260424_000005_review_run_provider_runtime.py  (+1 more)
review-bot/app/: config.py  main.py  queueing.py  schemas.py  worker.py
review-bot/app/api/: main.py
review-bot/review_bot/: config.py  contracts.py  errors.py  language_registry.py  main.py  metrics.py  policy.py  queueing.py  review_units.py  schemas.py  worker.py
review-bot/tests/: asgi_test_client.py  conftest.py  test_api_queue.py  test_config.py  test_engine_client.py  test_gitlab_adapter.py  test_health.py  test_integration_phase1_4.py  test_language_registry.py  test_multilang_smoke_fixture.py  test_openai_provider_direct_smoke.py  test_prompting.py  test_provider_quality.py  test_review_runner.py  test_review_unit_split_audit.py  test_wrong_language_baseline_scripts.py
review-engine/: .gitignore  Dockerfile  README.md  pyproject.toml
review-engine/app/: models.py
review-engine/data/: active_guideline_records.json  altibase_coding_convention_rules.json  altidev4_scan_report.json  bash_active_guideline_records.json  bash_reference_guideline_records.json  c_active_guideline_records.json  c_reference_guideline_records.json  conflict_rules.json  cuda_active_guideline_records.json  cuda_reference_guideline_records.json  dockerfile_active_guideline_records.json  dockerfile_reference_guideline_records.json  excluded_guideline_records.json  go_active_guideline_records.json  go_reference_guideline_records.json  java_active_guideline_records.json  java_reference_guideline_records.json  javascript_active_guideline_records.json  javascript_reference_guideline_records.json  python_active_guideline_records.json  python_reference_guideline_records.json  reference_guideline_records.json  review_profiles.json  rust_active_guideline_records.json  rust_reference_guideline_records.json  sql_active_guideline_records.json  sql_reference_guideline_records.json  typescript_active_guideline_records.json  typescript_reference_guideline_records.json  yaml_active_guideline_records.json  yaml_reference_guideline_records.json
review-engine/examples/: altidev4_diffs.json  altidev4_snippets.json  control_flow.diff  cpp_diff_contracts.json  expected_retrieval_examples.json  manual_memory.diff  wrapper_portability_example.cpp
review-engine/review_engine/: __init__.py  config.py  extensions.py  models.py  prompting.py  rule_package.py
review-engine/rule_sources/: coverage_matrix.yaml  manifest.yaml
review-engine/schemas/: openapi.yaml
review-engine/tests/: conftest.py  test_altidev4_diff_contract.py  test_altidev4_regressions.py  test_altidev4_snippet_contract.py  test_api.py  test_codebase_scope.py  test_conflict_resolution.py  test_cpp_diff_contracts.py  test_expected_examples.py  test_language_registry.py  test_multilang_regressions.py  test_parsers.py  test_query_conversion.py  test_repository_scan.py  test_retrieval.py  test_review_metadata.py  test_rule_lifecycle_cli.py  test_rule_runtime.py  test_rule_runtime_private_extension.py  test_rule_self_tests.py  test_smoke_fixture_contracts.py  test_source_coverage_matrix.py
review-platform/: .gitignore  Dockerfile  README.md  pyproject.toml
review-platform/app/: config.py  main.py  schemas.py
review-platform/templates/: base.html  index.html  pull_request_detail.html  repository_detail.html
review-platform/tests/: asgi_test_client.py  conftest.py  test_health.py  test_pr_flow.py
(+813 files in other folders)
