[project]
name = "review-bot"
version = "0.1.0"
description = "Automated PR review bot for the internal review platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "openai>=1.51.0",
    "redis>=5.2.0",
    "rq>=1.16.2",
    "pydantic>=2.9.2",
    "psycopg[binary]>=3.2.3",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[project.scripts]
bot-api = "review_bot.main:main"
bot-worker = "review_bot.worker:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["review_bot*"]

[tool.setuptools.package-data]
review_bot = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
