[project]
name = "review-engine"
version = "0.1.0"
description = "C++ guideline review engine with canonical public rules and optional extensions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.5",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "numpy>=2.1.1",
    "pydantic>=2.9.2",
    "PyYAML>=6.0.2",
    "uvicorn>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["review_engine*"]

[tool.setuptools.package-data]
review_engine = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
